# Cltcron

./: !executar.md  !projeto.md  .gitignore  AGENTS.md  CronometroLeve.spec  Dockerfile  README.md  RULES.md  app.py  atividades.py  atualizar_build.bat  auditoria.md  banco.py  credenciais_tabelas.sql  dados.sql  declaracoes_dia.py  main.py  migration_cronometro_neutro.sql  navegador-testes.md  package-lock.json  pyproject.toml  release.bat  requirements-dev.txt  requirements.txt  temporary_rules.md  validate.bat
.github/workflows/: ci.yml
app/: __init__.py  app_shell.py  config.py  hooks_input.py  main.py  mega_sync.py  mega_uploader.py  monitor.py  subtarefas.py  validador_pix.py  win32_utils.py
painel/: auditoria.php  baixar_app.php  canal.php  credenciais.php  gerenciar-tarefas.php  index.php  log.php  login.php  logout.php  mega-campos.php  mega.php  relatorio.php  usuarios.php
painel/_layout/: fim_conteudo.php  rodape.php  topo.php
painel/commands/_comum/: .htaccess  auth.php  credenciais_upsert.php  cripto.php  declaracoes_dia_itens.php  env.php  log_atividades.php  pix.php  rate_limit.php  resposta.php  usuarios_estrutura.php
painel/commands/atividades/: alterar_status.php  criar.php  editar.php  excluir.php  listar.php
painel/commands/atividades_subtarefas/: editar.php  listar.php
painel/commands/auditoria/: excluir_app_suspeito.php  flags_usuarios.php  input_stats.php  listar_apps_suspeitos.php  salvar_app_suspeito.php
painel/commands/conexao/: conexao.php  testar.php
painel/commands/credenciais/: excluir_modelo.php  (+6 more)
painel/css/: painel.css
painel/js/: aba-atividades.js  aba-auditoria.js  aba-credenciais.js  aba-gerenciar-tarefas.js  aba-graficos.js  aba-log-atividades.js  aba-mega.js  aba-relatorio.js  aba-timeline.js  aba-usuarios.js  painel.js
tests/: conftest.py  test_atividades.py  test_banco.py  test_declaracoes_validacao.py  test_tempo.py
tools/: sync_mega_links.py
(+49 files in other folders)
