[project]
name = "cronometro"
version = "2.2"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long (tratamos com line-length)
    "E741",   # ambiguous variable name
    "B028",   # no explicit stacklevel
    "E701",   # múltiplas declarações na mesma linha (colon) — estilo usado pelo projeto em try/except curtos
    "E702",   # múltiplas declarações na mesma linha (semicolon) — idem
    "E402",   # import não no topo — usado intencionalmente em app/config.py para evitar ciclo de import
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "UP"]
"app/__init__.py" = ["F401"]  # re-exports para compatibilidade

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # assert usado em testes
